# NOVA-CAR

./: .gitignore  README.md  code.py  docker-compose.yml  sdkconfig  test_mqtt.py
AI_Models/: mobilenet_int8.tflite
AI_Models/Computer Vision/: README.md  mobilenet128_aint8.tflite
AI_Models/Computer Vision/main/: main.ino
AI_Models/Computer Vision/main/data/: main.css  main.html  main.js
AI_Models/Computer Vision/main/src/: Config.h
AI_Models/Computer Vision/main/src/AI_Engine/: AI_Engine.cpp  AI_Engine.h
AI_Models/Computer Vision/main/src/Camera/: Camera.cpp  Camera.h
AI_Models/Computer Vision/main/src/Network_Manager/: http.cpp  http.h
AI_Models/Computer Vision/main/src/WebServer/: WebServer.cpp  WebServer.h
AI_Models/Computer Vision/main/src/app/AI/: AI_Engine.cpp  AI_Engine.h
AI_Models/Computer Vision/main/src/app/Comm/: MQTT_Manager.cpp  MQTT_Manager.h
AI_Models/Computer Vision/main/src/hal/Camera/: Camera_HAL.cpp
AI_Models/Computer Vision/main/src/mcal/uart/: uart_driver.cpp  uart_driver.h
AI_Models/Computer Vision/models/: mobilenet128_aint8v2.tflite
AI_Models/ComputerVision/: README.md  state-farm-distracted-driver-detection.ipynb
AI_Models/ComputerVision/main/: main.ino
AI_Models/ComputerVision/main/src/app/Telegram_bot/: Telegram_Manager.cpp  Telegram_Manager.h
AI_Models/ComputerVision/models/: mobilenet128_aint8v3.tflite
AI_Models/Predictive Maintenance/: 00_Data_Combining.ipynb  02_Training_and_Data_preparation.ipynb
AI_Models/Predictive Maintenance/embedded models/Engine Bearing/: cnn_quant_three_features.h  cnn_quant_three_features.tflite  engine_nn_pca_quant_three_features.h  engine_nn_pca_quant_three_features.tflite  engine_nn_quant_four_features.h  engine_nn_quant_four_features.tflite  engine_nn_quant_three_features.h  engine_nn_quant_three_features.tflite
NOVA-CAR/: .gitignore  CMakeLists.txt  sdkconfig
NOVA-CAR/AI_Models/Predictive Maintenance/: 01_EDA.ipynb  02_Training_and_Data_preparation.ipynb
NOVA-CAR/Src/: Cfg.h
NOVA-CAR/Src/App/DHT11/: dht11.c  dht11.h
NOVA-CAR/Src/App/GPS/: gps.c
NOVA-CAR/Src/App/IMU/: imu.c  imu.h
NOVA-CAR/Src/App/LDR/: ldr.c  ldr.h
NOVA-CAR/Src/App/MQTT/: mqtt.c  mqtt.h
NOVA-CAR/Src/App/ULTRASONIC/: ultrasonic.h
NOVA-CAR/Src/Hal/ADC/: adc.c  adc.h
NOVA-CAR/Src/Hal/GPIO/: gpio.c  gpio.h
NOVA-CAR/Src/Hal/I2C/: i2c.c  i2c.h
NOVA-CAR/Src/Hal/UART/: uart.c  uart.h
NOVA-CAR/Src/Hal/WIFI/: wifi.c  wifi.h
NOVA-CAR/docs/: Project Proposal.odt  Software Requirements Specification (SRS).odt
NOVA-CAR/main/: CMakeLists.txt  main.c
Software/Src/: Cfg.h
Software/Src/App/Modules_Driver/FOTA/: fota.c  fota.h
Software/Src/App/Services/SensorTask/FOTA_TASK/: fota_task.c  fota_task.h
Software/Src/App/System/RTOS_MANAGER/: rtos_manager.c
Src/: Cfg.h
Src/App/GPS/: gps.c  gps.h
Src/App/GSM/: gsm.c
Src/App/IMU/: imu.c  imu.h
Src/App/LDR/: ldr.c
Src/App/MQTT/: mqtt.c  mqtt.h
Src/App/Modules_Driver/DHT11/: dht11.c
Src/App/Modules_Driver/GSM/: gsm.c  gsm.h
Src/App/Modules_Driver/IMU/: imu.c  imu.h
Src/App/Modules_Driver/MQTT/: mqtt.c  mqtt.h
Src/App/Modules_Driver/PREDICTIVE_MAINTENANCE/: predictive_maintenance.cpp  predictive_maintenance.h
Src/App/Modules_Driver/SENSOR_FUSION/: sensor_fusion.c  sensor_fusion.h
Src/App/Modules_Driver/ULTRASONIC/: ultrasonic.c
Src/App/PREDICTIVE_MAINTENANCE/: predictive_maintenance.cpp  predictive_maintenance.h
Src/App/Services/AggregateTask/: aggregate_task.c  aggregate_task.h
Src/App/Services/SensorTask/DHT11_TASK/: dht11_task.c  dht11_task.h
Src/App/Services/SensorTask/GPS_TASK/: gps_task.c  gps_task.h
Src/App/Services/SensorTask/GSM_TASK/: gsm_task.c  gsm_task.h
Src/App/Services/SensorTask/IMU_TASK/: imu_task.c  imu_task.h
Src/App/Services/SensorTask/LDR_TASK/: ldr_task.c  ldr_task.h
Src/App/Services/SensorTask/PREDICTIVE_MAINTENANCE_TASK/: predictive_maintenance_task.c  predictive_maintenance_task.h
Src/App/Services/SensorTask/SENSOR_FUSION_TASK/: sensor_fusion_task.c  sensor_fusion_task.h
Src/App/Services/SensorTask/ULTRASONIC_TASK/: ultrasonic_task.c  ultrasonic_task.h
Src/App/System/: system_type.h
Src/App/System/RTOS_MANAGER/: rtos_manager.c  rtos_manager.h
Src/App/ULTRASONIC/: ultrasonic.c  ultrasonic.h
Src/Hal/ADC/: adc.c  adc.h
Src/Hal/GPIO/: gpio.c  gpio.h
Src/Hal/I2C/: i2c.c  i2c.h
Src/Hal/UART/: uart.c  uart.h
Src/Hal/WIFI/: wifi.c
docker/: docker-compose.yml
docker/grafana/data/: grafana.db
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: influxdb.yml
docker/grafanna/provisioning/dashboards/: dashboard.yml
docker/grafanna/provisioning/datasources/: influxdb.yml
docker/influxdb/config/: influx-configs
docker/influxdb/data/: influxd.bolt
docker/influxdb/data/engine/data/57b2675d8857d899/autogen/1/: fields.idxl
docker/influxdb/data/engine/data/57b2675d8857d899/autogen/1/index/0/: L0-00000001.tsl
docker/influxdb/data/engine/data/57b2675d8857d899/autogen/1/index/1/: L0-00000001.tsl
docker/influxdb/data/engine/data/57b2675d8857d899/autogen/1/index/2/: L0-00000001.tsl
docker/influxdb/data/engine/data/57b2675d8857d899/autogen/1/index/3/: L0-00000001.tsl
docker/influxdb/data/engine/data/57b2675d8857d899/autogen/1/index/4/: L0-00000001.tsl
docker/influxdb/data/engine/data/57b2675d8857d899/autogen/1/index/5/: L0-00000001.tsl
docker/influxdb/data/engine/data/57b2675d8857d899/autogen/1/index/6/: L0-00000001.tsl
docker/influxdb/data/engine/data/57b2675d8857d899/autogen/1/index/7/: L0-00000001.tsl
docker/influxdb/data/engine/data/903bebc312cbef71/autogen/1/: 000000003-000000002.tsm  fields.idx
docker/influxdb/data/engine/data/903bebc312cbef71/autogen/1/index/0/: L1-00000001.tsi
docker/mosquitto/: README_PASSWORD.md  create_password.bat  create_password.sh
docker/mosquitto/config/: mosquitto.conf  passwd
docker/mosquitto/data/: mosquitto.db
docker/telegraf/: telegraf.conf
main/: CMakeLists.txt  idf_component.yml  main.c
(+7 files in other folders)
